@@ -121,16 +121,17 @@ the account instead of opening a register.") #f))
   (let* ((conf-file-name (gnc:html-encode-string book-url))
 	 (dotgnucash-dir (build-path (getenv "HOME") ".gnucash"))
          (file-dir (build-path dotgnucash-dir "books"))
+         (save-file? #f)
          (book-path #f))
 
-    ;; make sure ~/.gnucash is there
-    (if (not (access? dotgnucash-dir X_OK)) (mkdir dotgnucash-dir #o700))
+    ;; make sure ~/.gnucash/books is there
+    (set! save-file? (and (gnc:make-dir dotgnucash-dir)
+                         (gnc:make-dir file-dir)))
 
-    ;; make sure the books directory is there
+    (if (not save-file?) (gnc:warn (_ "Can't save window state")))
 
-    (if (not (access? file-dir X_OK)) (mkdir file-dir #o700))
-
-    (if (and conf-file-name (gnc:main-window-can-save? (gnc:get-ui-data)))
+    (if (and save-file? conf-file-name
+             (gnc:main-window-can-save? (gnc:get-ui-data)))
         (let ((book-path (build-path (getenv "HOME") ".gnucash" "books" 
                                      conf-file-name)))
           (with-output-to-port (open-output-file book-path)
