@@ -52,9 +52,14 @@
                   '())))))
     (apply append (map path-interpret new-path))))
 
+(define (gnc:make-dir dir)
+  (if (access? dir X_OK)
+      #t
+      (false-if-exception (mkdir dir #o700))))
+
 (define (gnc:make-home-dir)
   (let ((home-dir (build-path (getenv "HOME") ".gnucash")))
-    (if (access? home-dir X_OK) #t (mkdir home-dir #o700))))
+    (gnc:make-dir home-dir)))
 
 (define gnc:current-config-auto
   (build-path (getenv "HOME") ".gnucash" "config-1.6.auto"))
