@@ -1,3 +1,14 @@
+2001-08-04  Dave Peticolas  <dave@krondo.com>
+
+	* src/scm/main-window.scm: handle errors in creating
+	~/.gnucash/books
+
+	* src/scm/path.scm (gnc:make-dir): new func
+
+	* src/scm/options.scm: same as below
+
+	* src/scm/html-style-sheet.scm: handle file opening error
+
 2001-08-03  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/dialog-sxsincelast.c: same as below
